# CS-BackupHelper

./: .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  CHANGELOG.md  Dockerfile  README.md  docker-compose.development.yml  docker-compose.e2e.yml  docker-compose.sidecar.yml  docker-compose.yml  pyproject.toml
.github/: dependabot.yml
.github/config/docker-base-image-monitor/: base-images.json
.github/workflows/: actions-maintenance.yml  docker-maintenance.yml  docker-release.yml
docs/: cli.md  configuration.md  deployment.md  destinations.md  encryption.md  migration.md  notifications.md  plugins.md  restore.md  retention.md  sources.md
examples/config/: README.md  all-notifications.json  encrypted.json  gfs-retention.json  mariadb-files.json  multi-job.json  multi-source-bundle.json  mysql.json  postgres-local.json  postgres-s3.json  s3-bucket-mirror.json
examples/dev-uploads/: hello.txt
scripts/: e2e.sh
src/backuphelper/: __init__.py  cli.py  healthcheck.py  logging_setup.py  main.py  runner.py  scheduler.py
src/backuphelper/archive/: __init__.py  bundle.py  manifest.py
src/backuphelper/config/: __init__.py  interpolation.py  loader.py  models.py
src/backuphelper/destinations/: __init__.py  base.py  local.py  s3.py
src/backuphelper/encryption/: __init__.py  engine.py
src/backuphelper/integrity/: __init__.py  hashing.py
src/backuphelper/net/: __init__.py  retry.py
src/backuphelper/notify/: __init__.py  base.py  discord.py  email.py  healthchecks.py  (+5 more)
tests/: test_cli.py  test_healthcheck.py  test_logging_redaction.py  test_runner.py  test_scheduler.py
tests/archive/: test_bundle.py  test_manifest.py
tests/config/: test_interpolation.py  test_loader.py  test_models.py
tests/destinations/: test_local.py  test_s3.py
tests/encryption/: test_engine.py
tests/integrity/: test_hashing.py
tests/net/: test_retry.py
tests/notify/: test_base.py  test_discord.py  test_email.py  test_healthchecks.py  test_manager.py  test_ntfy.py  test_slack.py  test_teams.py  test_webhook.py
tests/plugins/: test_commands.py  test_hooks.py  test_registry.py
tests/retention/: test_age.py  test_count.py  test_gfs.py  test_manager.py  test_smart.py
tests/sources/: test_base.py  test_env_snapshot.py  test_filesystem.py  test_mysql_family.py  test_postgres.py  test_s3_bucket.py
(+18 files in other folders)
