[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "backuphelper"
version = "0.1.0"
description = "BAUER GROUP central backup engine — pluggable multi-source snapshots with S3/local destinations, retention, notifications and a restore CLI"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Karl Bauer", email = "kb@de.bauer-group.com" }]
dependencies = [
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "boto3>=1.34",
    "apscheduler>=3.10,<4",
    "tenacity>=8.3",
    "typer>=0.12",
    "rich>=13.7",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.2",
    "moto[s3]>=5.0",
]

# Source plugins register here; the engine discovers them at runtime.
# Consuming repos add their own entry points under this group.
[project.entry-points."backuphelper.sources"]
postgres = "backuphelper.sources.postgres:PostgresSource"
mariadb = "backuphelper.sources.mariadb:MariaDBSource"
mysql = "backuphelper.sources.mysql:MySQLSource"
s3 = "backuphelper.sources.s3_bucket:S3BucketSource"
filesystem = "backuphelper.sources.filesystem:FilesystemSource"
env = "backuphelper.sources.env_snapshot:EnvSnapshotSource"

# Command plugins register here: a consuming repo mounts app-specific operator
# subcommands (e.g. NocoDB restore-schema/records/attachments) as a typer.Typer
# under this group; the engine discovers + mounts them at CLI startup. The engine
# ships none of its own.
# [project.entry-points."backuphelper.commands"]
# <group-name> = "<pkg>.<module>:<typer_app_or_factory>"

# Lifecycle-hook plugins register here: each entry point is a register(registry)
# callable that adds pre/post_backup|dump|restore hooks (an app quiesce, an
# ENCRYPTION_KEY pre_restore gate, …). discover_hooks() builds the registry at CLI
# startup; with no hook plugins installed it is empty (zero-coupling default).
# [project.entry-points."backuphelper.hooks"]
# <name> = "<pkg>.<module>:register"

[project.scripts]
backuphelper = "backuphelper.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra --import-mode=importlib"
